assets/src/scss/pages/_page.scss
.page-content {
  > * {
    position: relative;
    z-index: 2;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  p:not(.article-list-item-meta) a,
  > ul li a,
  > ol li a {
    @include shared-link-styles;
  }

  &.no-page-title {
    padding-top: var(--navbar-menu-height--small);

    @include large-and-up {
      padding-top: var(--navbar-menu-height--large);
    }

    & > p:first-child {
      padding-top: $sp-1;

      @include small-and-up {
        padding-top: $sp-1x;
      }

      @include medium-and-up {
        padding-top: $sp-2;
      }

      @include large-and-up {
        padding-top: $sp-4;
      }

      @include x-large-and-up {
        padding-top: $sp-6;
      }
    }

    > .wp-block-group,
    > .wp-block-image {
      &:first-child {
        margin-top: 0;
      }
    }

    .navigation-bar_min ~ & {
      padding-top: var(--navbar-menu-min-height);
    }
  }
}

.with-mobile-tabs ~ :not(.page-header) + .page-content {
  @include medium-and-less {
    padding-top: calc(var(--navbar-menu-height--small) + 50px);
  }
}

.single-campaign {
  .page-content {
    > p:last-child {
      margin-bottom: $sp-8;
    }

    &:not(.no-page-title) {
      section:first-child {
        margin-top: $sp-5;
      }
    }
  }
}

.password-form {
  .input-text {
    font-size: 16px;
    line-height: 1.6;
    font-weight: 400;
    margin-bottom: 16px;
    position: relative;
  }

  .input-text input {
    border: 1px solid var(--color-border-input);
    border-radius: 4px;
    display: inline-block;
    font-size: 16px;
    padding: 15px 14px 8px;
    width: 100%;

    @include medium-and-up {
      max-width: 400px;
    }
  }

  .input-text input:hover {
    border: 1px solid var(--grey-600);
  }

  .input-text input:focus {
    border-color: rgba(0, 109, 253, 0.75);
    outline: 0 none;
  }
}

